--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
+    "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.14.2",
+    "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
