--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.4",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@lottiefiles/svelte-lottie-player": "^0.3.1",
     "astro": "^4.14.2",
     "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
