--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/mdx": "^3.1.4",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vue": "^4.5.0",
     "@lottiefiles/svelte-lottie-player": "^0.3.1",
     "astro": "^4.14.2",
+    "lucide-vue-next": "^0.441.0",
     "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
