--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.2",
     "@astrojs/mdx": "^3.1.4",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "@lottiefiles/svelte-lottie-player": "^0.3.1",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.14.1",
     "astro": "^4.14.2",
     "svelte": "^4.2.19",
     "tailwindcss": "^3.4.10",
